// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAccordion is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion testClass1 testClass2 emotion-euiAccordion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="0"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="0"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="0"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion isDisabled is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="21"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiAccordion__arrow-left-isClosed"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="21"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button-disabled"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="21"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props arrowDisplay none is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="14"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="14"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props arrowDisplay right is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="13"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <button
      aria-controls="13"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="13"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props arrowProps is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="15"
      aria-expanded="false"
      aria-hidden="true"
      aria-label="aria-label"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow testClass1 testClass2 emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed-euiTestCss"
      data-test-subj="test subject string"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="15"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="15"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props buttonContent is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="3"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="3"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      >
        <div>
          Button content
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="3"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props buttonContentClassName is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="2"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="2"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent button content class name"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="2"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props buttonElement is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="10"
      aria-expanded="false"
      aria-hidden="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <div
      aria-controls="10"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="10"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props buttonProps is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="4"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="4"
      aria-expanded="false"
      aria-label="aria-label"
      class="euiAccordion__button testClass1 testClass2 emotion-euiAccordion__button-euiTestCss"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="4"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props buttonProps paddingSize l 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="7"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="7"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button-l-arrowLeft"
      data-test-subj="button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="7"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props buttonProps paddingSize m 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="6"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="6"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button-m-arrowLeft"
      data-test-subj="button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="6"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props buttonProps paddingSize s 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="5"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="5"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button-s-arrowLeft"
      data-test-subj="button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="5"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props element is rendered 1`] = `
<fieldset
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="1"
      aria-expanded="false"
      aria-hidden="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <legend
      aria-controls="1"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </legend>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="1"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</fieldset>
`;

exports[`EuiAccordion props extraAction is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="11"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="11"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <div
      class="euiAccordion__optionalAction emotion-euiAccordion-optionalAction"
    >
      <button>
        Extra action
      </button>
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="11"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiAccordion props forceState closed is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="16"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="16"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="16"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    >
      <p>
        You can not see me
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props forceState open is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="17"
      aria-expanded="true"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="17"
      aria-expanded="true"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
    id="17"
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    >
      <p>
        You can see me
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props initialIsOpen is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="12"
      aria-expanded="true"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="12"
      aria-expanded="true"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen-noTransition"
    id="12"
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    >
      <p>
        You can see me.
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props isLoading is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="19"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="19"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <div
      class="euiAccordion__optionalAction emotion-euiAccordion-optionalAction"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
        role="progressbar"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="19"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children euiAccordion__children-isLoading emotion-euiAccordion__children-isLoading"
    />
  </div>
</div>
`;

exports[`EuiAccordion props isLoadingMessage is rendered 1`] = `
<div
  class="euiAccordion emotion-euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="20"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-left-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="20"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <div
      class="euiAccordion__optionalAction emotion-euiAccordion-optionalAction"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
        role="progressbar"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="20"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children euiAccordion__children-isLoading emotion-euiAccordion__children-isLoading"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner euiAccordion__spinner emotion-euiLoadingSpinner-m-EuiAccordionChildrenLoading"
        role="progressbar"
      />
      <div
        class="euiText emotion-euiText-s"
      >
        <p>
          Please wait
        </p>
      </div>
    </div>
  </div>
</div>
`;
